// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker test renders and matches snapshot with summary 1`] = `
<div
  className="activate-date-picker"
>
  <p
    className="activate-date-picker_summary"
  >
    Selected date is: 
    <em>
      Monday, December 25, 2017
    </em>
  </p>
  <div
    className="react-date-picker react-date-picker--closed activate-date-picker_picker"
    onFocus={[Function]}
  >
    <div
      className="react-date-picker__button"
    >
      <div
        className="react-date-picker__button__input"
      >
        <input
          max={null}
          min={null}
          name="date"
          onChange={[Function]}
          onFocus={[Function]}
          required={undefined}
          style={
            Object {
              "left": "-9999px",
              "position": "absolute",
              "top": "-9999px",
              "visibility": "hidden",
            }
          }
          type="date"
          value="2017-12-25"
        />
        <input
          className="react-date-picker__button__input__month"
          max={12}
          min={1}
          name="month"
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="--"
          required={null}
          type="number"
          value={12}
        />
        <span
          className="react-date-picker__button__input__divider"
        >
          /
        </span>
        <input
          className="react-date-picker__button__input__day"
          max={31}
          min={1}
          name="day"
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="--"
          required={null}
          type="number"
          value={25}
        />
        <span
          className="react-date-picker__button__input__divider"
        >
          /
        </span>
        <input
          className="react-date-picker__button__input__year"
          max={null}
          min={1000}
          name="year"
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="--"
          required={null}
          step={1}
          type="number"
          value={2017}
        />
      </div>
      <button
        className="react-date-picker__clear-button react-date-picker__button__icon"
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      />
      <button
        className="react-date-picker__calendar-button react-date-picker__button__icon"
        onBlur={undefined}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        <span
          className="activate-icon fa fa-calendar activate-date-picker_picker_icon"
          id={undefined}
          onClick={undefined}
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`DatePicker test renders and matches snapshot without summary 1`] = `
<div
  className="activate-date-picker"
>
  <div
    className="react-date-picker react-date-picker--closed activate-date-picker_picker"
    onFocus={[Function]}
  >
    <div
      className="react-date-picker__button"
    >
      <div
        className="react-date-picker__button__input"
      >
        <input
          max={null}
          min={null}
          name="date"
          onChange={[Function]}
          onFocus={[Function]}
          required={undefined}
          style={
            Object {
              "left": "-9999px",
              "position": "absolute",
              "top": "-9999px",
              "visibility": "hidden",
            }
          }
          type="date"
          value="2017-12-25"
        />
        <input
          className="react-date-picker__button__input__month"
          max={12}
          min={1}
          name="month"
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="--"
          required={null}
          type="number"
          value={12}
        />
        <span
          className="react-date-picker__button__input__divider"
        >
          /
        </span>
        <input
          className="react-date-picker__button__input__day"
          max={31}
          min={1}
          name="day"
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="--"
          required={null}
          type="number"
          value={25}
        />
        <span
          className="react-date-picker__button__input__divider"
        >
          /
        </span>
        <input
          className="react-date-picker__button__input__year"
          max={null}
          min={1000}
          name="year"
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="--"
          required={null}
          step={1}
          type="number"
          value={2017}
        />
      </div>
      <button
        className="react-date-picker__clear-button react-date-picker__button__icon"
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      />
      <button
        className="react-date-picker__calendar-button react-date-picker__button__icon"
        onBlur={undefined}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        <span
          className="activate-icon fa fa-calendar activate-date-picker_picker_icon"
          id={undefined}
          onClick={undefined}
        />
      </button>
    </div>
  </div>
</div>
`;
